do not re-export HttpServer from server module

--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -1,6 +1,6 @@
 # Server
 
-The [**HttpServer**](../actix_web/struct.HttpServer.html) type is responsible for
+The [**HttpServer**](../actix_web/server/struct.HttpServer.html) type is responsible for
 serving http requests.
 
 `HttpServer` accepts an application factory as a parameter, and the
@@ -18,13 +18,12 @@ To start the http server, one of the start methods.
 ```rust
 # extern crate actix;
 # extern crate actix_web;
-use actix::*;
-use actix_web::{server, App, HttpResponse};
+use actix_web::{server::HttpServer, App, HttpResponse};
 
 fn main() {
     let sys = actix::System::new("guide");
 
-    server::new(
+    HttpServer::new(
         || App::new()
             .resource("/", |r| r.f(|_| HttpResponse::Ok())))
         .bind("127.0.0.1:59080").unwrap()
@@ -54,8 +53,7 @@ address of the started http server. It accepts several messages:
 # use futures::Future;
 use std::thread;
 use std::sync::mpsc;
-use actix::*;
-use actix_web::{server, App, HttpResponse, HttpServer};
+use actix_web::{server, App, HttpResponse};
 
 fn main() {
     let (tx, rx) = mpsc::channel();
@@ -87,7 +85,7 @@ can be overridden with the `HttpServer::threads()` method.
 ```rust
 # extern crate actix_web;
 # extern crate tokio_core;
-use actix_web::{App, HttpServer, HttpResponse};
+use actix_web::{App, HttpResponse, server::HttpServer};
 
 fn main() {
     HttpServer::new(
@@ -123,7 +121,7 @@ fn main() {
     builder.set_private_key_file("key.pem", SslFiletype::PEM).unwrap();
     builder.set_certificate_chain_file("cert.pem").unwrap();
 
-    HttpServer::new(
+    server::new(
         || App::new()
             .resource("/index.html", |r| r.f(index)))
         .bind("127.0.0.1:8080").unwrap()
