--- a/guide/src/qs_10.md
+++ b/guide/src/qs_10.md
@@ -179,7 +179,7 @@ session data.
 ```rust
 # extern crate actix;
 # extern crate actix_web;
-use actix_web::*;
+use actix_web::{server, App, HttpRequest, Result};
 use actix_web::middleware::{RequestSession, SessionStorage, CookieSessionBackend};
 
 fn index(mut req: HttpRequest) -> Result<&'static str> {
@@ -196,7 +196,7 @@ fn index(mut req: HttpRequest) -> Result<&'static str> {
 
 fn main() {
 #   let sys = actix::System::new("basic-example");
-    HttpServer::new(
+    server::new(
         || App::new()
             .middleware(SessionStorage::new(          // <- create session middleware
                 CookieSessionBackend::build(&[0; 32]) // <- create cookie session backend
