Guide: tweak to http/2.

--- a/guide/src/qs_13.md
+++ b/guide/src/qs_13.md
@@ -42,5 +42,5 @@ Upgrades to *HTTP/2.0* schema described in
 Starting *HTTP/2* with prior knowledge is supported for both clear text connection
 and tls connection. [rfc section 3.4](https://http2.github.io/http2-spec/#rfc.section.3.4)
 
-> Check the [examples/tls](https://github.com/actix/actix-web/tree/master/examples/tls)
+> Check out [examples/tls](https://github.com/actix/actix-web/tree/master/examples/tls)
 > for a concrete example.
