Guide: tweak to database integration.

--- a/guide/src/qs_14.md
+++ b/guide/src/qs_14.md
@@ -34,7 +34,7 @@ impl Message for CreateUser {
 }
 ```
 
-We can send a `CreateUser` message to the `DbExecutor` actor, and as a result, we receive a
+We can send a `CreateUser` message to the `DbExecutor` actor, and as a result, we will receive a
 `User` model instance. Next, we must define the handler implementation for this message.
 
 ```rust,ignore
@@ -98,8 +98,8 @@ fn main() {
 }
 ```
 
-Finally, we use the address in a request handler. We receive the message response
-asynchronously, thus the handler returns a future object.
+We will use the address in a request handler. The handle returns a future object;
+thus, we receive the message response asynchronously.
 `Route::a()` must be used for async handler registration.
 
 
