fix guide example

--- a/guide/src/qs_12.md
+++ b/guide/src/qs_12.md
@@ -37,7 +37,7 @@ fn main() {
         .handler(
             "/static",
             fs::StaticFiles::new(".")
-                .show_folder_listing())
+                .show_files_listing())
         .finish();
 }
 ```
