update guide examples

--- a/guide/src/qs_10.md
+++ b/guide/src/qs_10.md
@@ -203,9 +203,8 @@ fn main() {
     server::new(
         || App::new()
             .middleware(SessionStorage::new(          // <- create session middleware
-                CookieSessionBackend::build(&[0; 32]) // <- create cookie session backend
+                CookieSessionBackend::new(&[0; 32]) // <- create cookie session backend
                     .secure(false)
-                    .finish()
             )))
         .bind("127.0.0.1:59880").unwrap()
         .start();
