--- a/router/CHANGES.txt
+++ b/router/CHANGES.txt
@@ -1,5 +1,9 @@
 # Changes
 
+## [0.1.1] - 2019-04-03
+
+* Get dynamic segment by name instead of iterator.
+
 ## [0.1.0] - 2019-03-09
 
 * Initial release
