--- a/router/CHANGES.txt
+++ b/router/CHANGES.txt
@@ -1,5 +1,9 @@
 # Changes
 
+## [0.1.3] - 2019-04-22
+
+* Added support for `remainder match` (i.e "/path/{tail}*")
+
 ## [0.1.2] - 2019-04-07
 
 * Export `Quoter` type
