--- a/router/CHANGES.txt
+++ b/router/CHANGES.txt
@@ -1,5 +1,11 @@
 # Changes
 
+## [0.2.0] - 2019-12-05
+
+* Update http to 0.2
+
+* Update regex to 1.3
+
 ## [0.1.5] - 2019-05-15
 
 * Remove debug prints
