--- a/router/CHANGES.txt
+++ b/router/CHANGES.txt
@@ -1,8 +1,8 @@
 # Changes
 
-## [0.2.1] - 2019-12-xx
+## [0.2.1] - 2019-12-25
 
-* Add `IntoPatterns` trait
+* Add `IntoPattern` trait
 
 * Add multi-pattern resources
 
