--- a/router/CHANGES.txt
+++ b/router/CHANGES.txt
@@ -1,6 +1,8 @@
 # Changes
 
-## [0.2.4] - 2019-12-xx
+## [0.3.0] - 2019-12-31
+
+* Support named parameters for `ResourceDef::resource_path()` in form of `((&k, &v), ...)`
 
 ## [0.2.3] - 2019-12-25
 
