Migrate to tokio 1.0 (#41)
* migrate to tokio 1.x

* update tests

--- a/ntex-router/CHANGES.txt
+++ b/ntex-router/CHANGES.txt
@@ -1,5 +1,9 @@
 # Changes
 
+## [0.4.0] - 2021-02-23
+
+* Upgrade to bytestring 1.0
+
 ## [0.3.8] - 2020-10-28
 
 * Router struct implements Clone trait
