--- a/ntex-router/CHANGES.txt
+++ b/ntex-router/CHANGES.txt
@@ -1,5 +1,9 @@
 # Changes
 
+## [0.4.3] - 2021-04-03
+
+* Disable some of regex features
+
 ## [0.4.2] - 2021-03-16
 
 * Use `IntoPattern` for prefix resources
