--- a/ntex-router/CHANGES.txt
+++ b/ntex-router/CHANGES.txt
@@ -1,5 +1,9 @@
 # Changes
 
+## [0.4.4] - 2021-06-14
+
+* Fix search order for normal and prefix paths
+
 ## [0.4.3] - 2021-04-03
 
 * Disable some of regex features
