--- a/ntex-router/CHANGES.txt
+++ b/ntex-router/CHANGES.txt
@@ -1,5 +1,9 @@
 # Changes
 
+## [0.5.0] - 2021-07-xx
+
+* Use ntex-bytes instead of bytestring
+
 ## [0.4.4] - 2021-06-14
 
 * Fix search order for normal and prefix paths
