--- a/ntex-router/CHANGES.txt
+++ b/ntex-router/CHANGES.txt
@@ -1,5 +1,9 @@
 # Changes
 
+## [0.5.1] - 2021-08-23
+
+* Fix: segments could be lost in case of immediate match
+
 ## [0.5.0] - 2021-06-27
 
 * Use ntex-bytes instead of bytestring
